--- a/legsOS/Makefile
+++ b/legsOS/Makefile
@@ -8,7 +8,7 @@ all: forth.img  kernel.txt
 
 forth.img: ../bfc/bfc ../C/legs16 forth.fs kernel.fs forth2.fs
 	../bfc/bfc -d 4000 -o forth.img forth.fs
-	cat forth2.fs | ../C/legs16 -sq
+	cat forth2.fs | ../C/legs16 -si forth.img
 
 kernel.txt: kernel.fs
 	grep : kernel.fs > kernel.txt
