made legsOS compile with standard forth.fs in include

--- a/legsOS/Makefile
+++ b/legsOS/Makefile
@@ -6,8 +6,8 @@ all: forth.img  kernel.txt
 ../bfc/bfc: ../bfc/bfc.c
 	$(CC) -o ../bfc/bfc ../bfc/bfc.c 
 
-forth.img: ../bfc/bfc ../C/legs16 forth.fs kernel.fs forth2.fs
-	../bfc/bfc -d 4000 -o forth.img forth.fs
+forth.img: ../bfc/bfc ../C/legs16 kernel.fs forth2.fs start.fs
+	../bfc/bfc -d 4000 -o forth.img start.fs 
 	cat forth2.fs | ../C/legs16 -si forth.img
 
 kernel.txt: kernel.fs
