legsOS: dwdsk.fs: added dwWrite ( a -- f )

--- a/legsOS/Makefile
+++ b/legsOS/Makefile
@@ -6,7 +6,7 @@ all: forth.img  kernel.txt
 ../bfc/bfc: ../bfc/bfc.c
 	$(CC) -o ../bfc/bfc ../bfc/bfc.c 
 
-forth.img: ../bfc/bfc ../C/legs16 kernel.fs forth2.fs start.fs becker.fs
+forth.img: ../bfc/bfc ../C/legs16 kernel.fs forth2.fs start.fs becker.fs dwdsk.fs
 	../bfc/bfc -d 4000 -o forth.img start.fs 
 	cat forth2.fs dwdsk.fs | ../C/legs16 -si forth.img
 
