legsOS: dw.fs: making vport work sorta works.

--- a/legsOS/Makefile
+++ b/legsOS/Makefile
@@ -6,9 +6,9 @@ all: forth.img  kernel.txt
 ../bfc/bfc: ../bfc/bfc.c
 	$(CC) -o ../bfc/bfc ../bfc/bfc.c 
 
-forth.img: ../bfc/bfc ../C/legs16 kernel.fs forth2.fs start.fs becker.fs dwdsk.fs
+forth.img: ../bfc/bfc ../C/legs16 kernel.fs forth2.fs start.fs dw.fs
 	../bfc/bfc -d 4000 -o forth.img start.fs 
-	cat forth2.fs dwdsk.fs | ../C/legs16 -si forth.img
+	cat forth2.fs dw.fs | ../C/legs16 -si forth.img
 
 kernel.txt: kernel.fs
 	grep : kernel.fs > kernel.txt
